<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="15dp">


    <TextView
        android:id="@+id/spinnerTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/spinner_title"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/workoutSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/workout_options"
        android:spinnerMode="dropdown" />

    <EditText
        android:id="@+id/workoutTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/modal_title"
        android:inputType="text"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/workoutDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/modal_description"
        android:inputType="text"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/workoutDuration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/modal_duration"
        android:inputType="numberDecimal"
        android:importantForAutofill="no" />

    <CheckBox
        android:id="@+id/workoutPerformed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/modal_performed" />


</LinearLayout>