<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/sortByTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/sort_items_by"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroupSortBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sortByTitle">

        <RadioButton
            android:id="@+id/radioTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sort_by_title" />

        <RadioButton
            android:id="@+id/radioDuration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sort_by_duration" />

        <RadioButton
            android:id="@+id/radioPerformed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sort_by_performed" />
    </RadioGroup>

    <TextView
        android:id="@+id/sortOrderTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/sort_order"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupSortBy" />

    <RadioGroup
        android:id="@+id/radioGroupSortOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sortOrderTitle">

        <RadioButton
            android:id="@+id/radioAscending"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sort_ascending" />

        <RadioButton
            android:id="@+id/radioDescending"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sort_descending" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>